ingress-deployment/first_second_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: testfirsthello.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
  - host: testsecondhello.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-second
          servicePort: 80
