ingress-deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: dev
spec:
  rules:
  - host: test.akomljen.com
    http:
      paths:
      - backend:
          serviceName: hello-service
          servicePort: 80
